--- a/task4.ipynb
+++ b/task4.ipynb
@@ -255,7 +255,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sobel_v(img):\n",
+    "    # write your code here\n",
+    "    filter = numpy.array([\n",
+    "        [-1, -2, -1],\n",
+    "        [0, 0, 0],\n",
+    "        [1, 2, 1]\n",
+    "    ])\n",
+    "    result = numpy.zeros(img.shape)\n",
+    "    n = 1\n",
+    "    neighborhood_value_mean = 0\n",
+    "    for p in numpy.ndindex(img.shape[1]-2, img.shape[0]-2):\n",
+    "        neighborhood_value = 0\n",
+    "        for q in numpy.ndindex(3, 3):\n",
+    "            weight = filter[q[1],q[0]]\n",
+    "\n",
+    "            neighborhood_value = neighborhood_value + (weight*img[p[1]+q[1],p[0]+q[0]])\n",
+    "        neighborhood_value_mean = neighborhood_value/6\n",
+    "        result[p[1]+1, p[0]+1] = neighborhood_value_mean\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "    \n",
+    "def prewitt_h(img):\n",
+    "    filter = numpy.array([\n",
+    "        [-1, 0, 1],\n",
+    "        [-2, 0, 2],\n",
+    "        [-1, 0, 1]\n",
+    "    ])\n",
+    "    result = numpy.zeros(img.shape)\n",
+    "    n = 1\n",
+    "    neighborhood_value_mean = 0\n",
+    "    for p in numpy.ndindex(img.shape[1]-2, img.shape[0]-2):\n",
+    "        neighborhood_value = 0\n",
+    "        for q in numpy.ndindex(3, 3):\n",
+    "            weight = filter[q[1], q[0]]\n",
+    "            \n",
+    "            neighborhood_value = neighborhood_value + (weight*img[p[1]+q[1],p[0]+q[0]])\n",
+    "        neighborhood_value_mean = neighborhood_value/6\n",
+    "        result[p[1]+1, p[0]+1] = neighborhood_value_mean\n",
+    "    return result"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -269,7 +310,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.imshow(sobel_h(lena), \"magma\")\n",
+    "plt.imshow(sobel_v(lena), \"magma\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -283,7 +327,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lena_s_h = skimage.io.imread(\"data/lena_sobel_v.tiff\")\n",
+    "lena_s_v = skimage.io.imread(\"data/lena_sobel_v.tiff\")"
+   ]
   }
  ],
  "metadata": {
